The 5 first step in PR03